# RustyGOL

./: Cargo.toml  README
src/: backup.rs  functions.rs  mini.rs
